--- a/YouTube downloader/packages.config
+++ b/YouTube downloader/packages.config
@@ -3,4 +3,5 @@
   <package id="MultiThreadedDownloader" version="1.1.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="ObjectListView.Official" version="2.9.1" targetFramework="net472" />
+  <package id="YouTubeApiLib" version="0.0.0" targetFramework="net472" />
 </packages>
