--- a/YouTube downloader/YouTube downloader.csproj
+++ b/YouTube downloader/YouTube downloader.csproj
@@ -111,6 +111,7 @@
     <Compile Include="MainConfiguration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Table.cs" />
     <Compile Include="Utils.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
