--- a/YouTube downloader/YouTube downloader.csproj
+++ b/YouTube downloader/YouTube downloader.csproj
@@ -109,6 +109,9 @@
     </Compile>
     <Compile Include="Helper.cs" />
     <Compile Include="MainConfiguration.cs" />
+    <Compile Include="MultipleProgressBar.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Table.cs" />
