Класс "MainConfiguration" переименован в "Configurator"

--- a/YouTube downloader/YouTube downloader.csproj
+++ b/YouTube downloader/YouTube downloader.csproj
@@ -108,7 +108,7 @@
       <DependentUpon>FrameYouTubeVideo.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper.cs" />
-    <Compile Include="MainConfiguration.cs" />
+    <Compile Include="Configurator.cs" />
     <Compile Include="MultipleProgressBar.cs">
       <SubType>Component</SubType>
     </Compile>
