--- a/YouTube downloader/YouTube downloader.csproj
+++ b/YouTube downloader/YouTube downloader.csproj
@@ -57,8 +57,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="MultiThreadedDownloader, Version=1.5.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MultiThreadedDownloader.1.5.1\lib\netstandard2.0\MultiThreadedDownloader.dll</HintPath>
+    <Reference Include="MultiThreadedDownloaderLib, Version=1.6.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MultiThreadedDownloaderLib.1.6.1\lib\netstandard2.0\MultiThreadedDownloaderLib.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -78,11 +78,13 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="YouTubeApiLib, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\YouTubeApiLib.0.3.0\lib\netstandard2.0\YouTubeApiLib.dll</HintPath>
+    <Reference Include="YouTubeApiLib, Version=0.4.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\YouTubeApiLib.0.4.1\lib\netstandard2.0\YouTubeApiLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TrackUrlDecryptor.cs" />
+    <Compile Include="ExternalServerClient.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
