--- a/YouTube downloader/YouTube downloader.csproj
+++ b/YouTube downloader/YouTube downloader.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="YouTubeChannelInfo.cs" />
     <Compile Include="YouTubeChannelSearcher.cs" />
     <Compile Include="YouTubeQuerySearcher.cs" />
     <EmbeddedResource Include="Form1.resx">
